Closed Bug 1871859 Opened 6 months ago Closed 6 months ago

Crash in [@ DMABufSurfaceRGBA::ReleaseTextures]

Categories

(Core :: Graphics, defect, P3)

Desktop
Linux
defect

Tracking

()

RESOLVED FIXED
123 Branch
Tracking Status
firefox-esr115 --- wontfix
firefox121 --- wontfix
firefox122 --- wontfix
firefox123 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

(Blocks 1 open bug)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/6f9d168f-dcf3-4330-a59b-2e2500231225

MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(mGL) (Missing GL context!)

Top 10 frames of crashing thread:

0  libxul.so  DMABufSurfaceRGBA::ReleaseTextures  widget/gtk/DMABufSurface.cpp:720
1  libxul.so  DMABufSurfaceRGBA::ReleaseSurface  widget/gtk/DMABufSurface.cpp:747
1  libxul.so  DMABufSurfaceRGBA::~DMABufSurfaceRGBA  widget/gtk/DMABufSurface.cpp:382
2  libxul.so  DMABufSurfaceRGBA::~DMABufSurfaceRGBA  widget/gtk/DMABufSurface.cpp:378
3  libxul.so  mozilla::gl::SurfaceFactory_DMABUF::CreateSharedImpl  gfx/gl/SharedSurfaceDMABUF.h:59
4  libxul.so  mozilla::gl::SurfaceFactory::CreateShared  gfx/gl/SharedSurface.h:187
5  libxul.so  mozilla::gl::SwapChain::Acquire  gfx/gl/GLScreenBuffer.cpp:54
6  libxul.so  mozilla::WebGLContext::CopyToSwapChain  dom/canvas/WebGLContext.cpp:1096
7  libxul.so  mozilla::gfx::DrawTargetWebgl::CopyToSwapChain  dom/canvas/DrawTargetWebgl.cpp:4680
7  libxul.so  mozilla::layers::CanvasTranslator::UnlockTexture  gfx/layers/ipc/CanvasTranslator.cpp:828
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3606ab5e28ab
Ensure DMABUF calls MakeCurrent before creating EGLImage objects. r=gfx-reviewers,lsalzman
Status: ASSIGNED → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 123 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: