Bug 1871859 - Ensure DMABUF calls MakeCurrent before creating EGLImage objects. r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D197270